# Zynk

./: .gitignore  404.html  CMakeLists.txt  README.md  build_docs.py  index.html  mkdocs.yml
.github/workflows/: cmake-multi-platform.yml  cmake.yml  deploy-docs.yml
contributing/: index.html
data-types/: index.html
docs/: contributing.md  data-types.md  index.md  installation.md
docs/examples/: basics.md  hello_world.md
examples/: demo.zk
examples/basics/: index.html
examples/hello_world/: index.html
installation/: index.html
search/: search_index.json
src/: CMakeLists.txt  cli.cpp  cli.h  evaluator.cpp  gc.cpp  interpreter.cpp  interpreter.h  lexer.cpp  main.cpp  parser.cpp  runtime.cpp
src/cli/: cli.cpp
src/cli/include/: cli.hpp
src/common/: cli.cpp
src/common/include/: errors.hpp
src/errors/include/: errors.hpp
src/execution/: evaluator.cpp  interpreter.cpp  runtime.cpp
src/execution/block/include/: block.hpp  object.hpp
src/execution/gc/: object.cpp
src/execution/gc/include/: gc.hpp  object.hpp
src/execution/include/: evaluator.hpp  interpreter.hpp  runtime.hpp
src/execution/typechecker/: checker.cpp
src/execution/typechecker/include/: checker.hpp
src/gc/: gc.cpp
src/gc/include/: block.hpp  gc.hpp  object.hpp
src/include/: ast.hpp  block.hpp  cli.hpp  errors.hpp  evaluator.hpp  gc.hpp  interpreter.hpp  lexer.hpp  parser.hpp  runtime.hpp  token.hpp
src/parsing/: lexer.cpp  parser.cpp
src/parsing/include/: ast.hpp  lexer.hpp  parser.hpp  token.hpp
src/typechecker/: checker.cpp
src/typechecker/include/: checker.hpp
tests/: CMakeLists.txt  test_block.cpp  test_cli.cpp  test_evaluator.cpp  test_gc.cpp  test_interpreter.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_runtime.cpp  test_typechecker.cpp
